--- a/profile.html
+++ b/profile.html
@@ -294,7 +294,7 @@
                           *Previous Title/Position
                         </div>
                         <div class="field580">
-                          <input class="label626" placeholder="MM/DD/YYYY" type="text" />
+                          <input class="label626" placeholder="Enter Previous Title/Position" type="text" />
                         </div>
                       </div>
                       <div class="input-field-with-label388">
@@ -660,7 +660,7 @@
                       <div class="input-field-with-label432">
                         <div class="maturity-date8">*Maturity Date</div>
                         <div class="field624">
-                          <input class="label673" placeholder="Enter Maturity Date" type="text" />
+                          <input class="label673" placeholder="MM/DD/YYYY" type="text" />
                         </div>
                       </div>
                     </div>
@@ -687,7 +687,7 @@
                         *Monthly Amortization
                       </div>
                       <div class="field627">
-                        <input class="label676" placeholder="MM/DD/YYYY" type="text" />
+                        <input class="label676" placeholder="Enter Monthly Amortization" type="text" />
                       </div>
                     </div>
                   </div>
@@ -917,7 +917,7 @@
       var userRequestsContainer = document.getElementById("userRequestsContainer");
       if (userRequestsContainer) {
         userRequestsContainer.addEventListener("click", function (e) {
-          window.location.href = "./new-requests.html";
+          window.location.href = "./newreq.html";
         });
       }
       
