--- a/saved-profile.html
+++ b/saved-profile.html
@@ -184,7 +184,7 @@
       var headersAndIcons = document.getElementById("headersAndIcons");
       if (headersAndIcons) {
         headersAndIcons.addEventListener("click", function (e) {
-          window.location.href = "./new-requests.html";
+          window.location.href = "./newreq.html";
         });
       }
       
