--- a/submitted.html
+++ b/submitted.html
@@ -73,12 +73,7 @@
             <div class="get-started8">LOGIN</div>
           </div>
         </div>
-        <img
-          class="mask-group-icon44"
-          loading="lazy"
-          alt=""
-          src="./public/mask-group-13@2x.png"
-        />
+     
       </header>
       <div class="main-content2">
         <div class="submission-content-parent">
@@ -147,7 +142,7 @@
       var primaryButton = document.getElementById("primaryButton");
       if (primaryButton) {
         primaryButton.addEventListener("click", function (e) {
-          window.location.href = "./landing-page.html";
+          window.location.href = "./newreq.html";
         });
       }
       </script>
