profile major changes

--- a/profile.html
+++ b/profile.html
@@ -99,9 +99,13 @@
           <div class="if-married1">
             <div class="personal-fields-inputs">
               <div class="component-294">
+
+
+
+                 <!--SPOUSE'S PERSONAL INFORMATION INPUTS-->
                 <div class="spouse-informationvariant35">
                   <div class="spouses-personal-information5">
-                    spouse'S PERSONAL INFORMATION
+                    SPOUSE'S PERSONAL INFORMATION
                   </div>
                   <div class="input-field-with-label365">
                     <div class="first-name14">*First Name</div>
@@ -152,7 +156,7 @@
                     </div>
                   </div>
                   <div class="field564">
-                    <input class="label609" placeholder="Placeholder" type="text" />
+                    <input class="label609" placeholder="Enter First Name" type="text" />
                   </div>
                   <div class="input-field-with-label373">
                     <div class="date-of-birth14">*Date of Birth</div>
@@ -193,6 +197,9 @@
                     </div>
                   </div>
                 </div>
+
+
+                   <!-- BORROWER'S FINANCIAL INFORMATION INPUTS-->
                 <div class="financial-information15">
                   <div class="borrower-financial-info-title-parent">
                     <div class="borrower-financial-info-title">
@@ -303,7 +310,15 @@
                           <input class="label627" placeholder="Enter Rental Income" type="text" />
                         </div>
                       </div>
+
+                      <div class="previous-employment-inputs3">
+                        <div class="business-income2">*Business Income</div>
+                        <div class="field690">
+                          <input class="label783" placeholder="Enter Business Income" type="text" />
+                        </div>
+                      </div>
                     </div>
+
                     <div class="borrower-previous-employment-i1">
                       <div class="input-field-with-label389">
                         <div class="gross-annual-salary13">
@@ -338,6 +353,8 @@
                     </div>
                   </div>
                 </div>
+
+                    <!-- SPOUSE'S FINANCIAL INFORMATION INPUTS-->
                 <div class="financial-information16">
                   <div class="spouse-financial-info-parent">
                     <div class="spouse-financial-info">
@@ -446,6 +463,14 @@
                           <input class="label643" placeholder="Enter Rental Income" type="text" />
                         </div>
                       </div>
+
+                      <div class="business-income3">
+                        <div class="business-income4">Business Income</div>
+                        <div class="field996">
+                          <input class="label903" placeholder="Enter Business Income" type="text" />
+                        </div>
+                      </div>
+
                     </div>
                     <div class="spouse-financial-details-field1">
                       <div class="input-field-with-label403">
@@ -483,6 +508,8 @@
                 </div>
                 <div class="borrower-information17">
                   <div class="borrowers-personal-informatio9">
+                    
+                       <!-- JUST FOR THE DESIGN -->
                     BORROWER'S PERSONAL INFORMATION
                   </div>
                   <div class="input-field-with-label407">
@@ -637,10 +664,13 @@
                     <img class="chevron-down-icon47" alt="" />
                   </div>
                 </div>
+
+
+                   <!-- Existing loan INFORMATION INPUTS-->
                 <div class="existing-loan-information13">
                   <div class="existing-loan-details1">
                     <div class="existing-loan-information14">
-                      Existing loan INFORMATION
+                      Existing loan INFORMATION            
                     </div>
                     <div class="existing-loan-fields">
                       <div class="input-field-with-label430">
@@ -691,12 +721,68 @@
                       </div>
                     </div>
                   </div>
+
+                   <!-- Existing loan INFORMATION INPUTS (2)-->
+                  <div class="optional" style="font-size: 16px; margin-top: 0; padding-top: 0; font-weight: bold;">(Optional)        
+                  </div>
+
+                  <div class="existing-loan-fields">
+                    <div class="input-field-with-label430">
+                      <div class="name-of-creditorbank8">
+                        Name of Creditor/Bank
+                      </div>  
+                      <div class="field622">
+                        <input class="label671" placeholder="Enter Name of Creditor/Bank" type="text" />
+                      </div>
+                    </div>
+                    <div class="input-field-with-label431">
+                      <div class="type-of-loan8">Type of Loan</div>
+                      <div class="field623">
+                        <input class="label672" placeholder="Enter Type of Loan" type="text" />
+                      </div>
+                    </div>
+                    <div class="input-field-with-label432">
+                      <div class="maturity-date8">Maturity Date</div>
+                      <div class="field624">
+                        <input class="label673" placeholder="MM/DD/YYYY" type="text" />
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="loan-amount-fields">
+                    <div class="input-field-with-label433">
+                      <div class="original-loan-amount8">
+                        Original Loan Amount
+                      </div>
+                      <div class="field625">
+                        <input class="label674" placeholder="Enter Original Loan Amount" type="text" />
+                      </div>
+                    </div>
+                    <div class="input-field-with-label434">
+                      <div class="outstanding-balance8">
+                        Outstanding Balance
+                      </div>
+                      <div class="field626">
+                        <input class="label675" placeholder="Enter Outstanding Balance" type="text" />
+                      </div>
+                    </div>
+                    <div class="input-field-with-label435">
+                      <div class="monthly-amortization9">
+                        Monthly Amortization
+                      </div>
+                      <div class="field627">
+                        <input class="label676" placeholder="Enter Monthly Amortization" type="text" />
+                      </div>
+                    </div>
+                  </div>
                 </div>
+
+
+                  <!--Deposit Accounts Information-->
+
                 <div class="borrower-information18">
                   <div class="borrower-financial-info1">
-                    <div class="borrowers-financial-informati17">
-                      BORROWER'S FINANCIAL INFORMATION
-                    </div>
+                    <div class="borrowers-financial-informati17">DEPOSIT ACCOUNTS INFORMATION</div>
                     <div class="account-info3">
                       <div class="input-field-with-label436">
                         <div class="account-number10">*Account Number</div>
@@ -709,10 +795,10 @@
                         <div class="component-2710">
                           <select class="dropdown8">
                             <option value="" selected disabled>Select Account Type</option>
-                              <option value="unemployed">Savings</option>
-                              <option value="self-employed">Checking</option>
-                              <option value="professional">Time Deposit</option>
-                          </select>   
+                            <option value="unemployed">Savings</option>
+                            <option value="self-employed">Checking</option>
+                            <option value="professional">Time Deposit</option>
+                          </select>
                         </div>
                       </div>
                     </div>
@@ -724,7 +810,44 @@
                     </div>
                   </div>
                 </div>
+                
+                   <!--Deposit Accounts Information(2)-->
+                <div class="borrower-information18">
+                  <div class="borrower-financial-info1">
+                    <div class="optional" style="font-size: 16px; margin-bottom: 0; padding-bottom: 0; font-weight: bold;">(Optional)</div>
+                    <div class="account-info3">
+                      <div class="input-field-with-label436">
+                        <div class="account-number10">Account Number</div>
+                        <div class="field628">
+                          <input class="label677" placeholder="Enter Account Number" type="text" />
+                        </div>
+                      </div>
+                      <div class="account-fields1">
+                        <div class="account-type10">Account Type</div>
+                        <div class="component-2710">
+                          <select class="dropdown8">
+                            <option value="" selected disabled>Select Account Type</option>
+                            <option value="unemployed">Savings</option>
+                            <option value="self-employed">Checking</option>
+                            <option value="professional">Time Deposit</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="input-field-with-label437">
+                    <div class="bank-and-branch8">Bank and Branch Address</div>
+                    <div class="field629">
+                      <input class="label679" placeholder="Enter Bank and Branch Address" type="text" />
+                    </div>
+                  </div>
+                </div>                 
               </div>
+
+
+
+                  <!-- BORROWER'S PERSONAL Information INPUTS-->
+
               <div class="borrowers-personal-informatio10">
                 BORROWER'S PERSONAL INFORMATION
               </div>
@@ -885,6 +1008,8 @@
       </footer>
     </div>
 
+
+                <!-- JAVASCRIPT CODES-->
     <script>
       var homeText = document.getElementById("homeText");
       if (homeText) {
