--- a/admin/admin-collateral.html
+++ b/admin/admin-collateral.html
@@ -51,7 +51,7 @@
             <div class="get-started4">LOGIN</div>
           </div>
         </div>
-        <button class="primary-button9">
+        <button class="primary-button9" id="bpi-button">
           <div class="bpi-housing-loan4">BPI Housing Loan Application Form</div>
         </button>
       </header>
@@ -217,6 +217,17 @@
           window.location.href = "./admin-deposit-account.html";
         });
       }
+
+ // Find the button element
+ const button = document.getElementById('bpi-button');
+
+// Add a click event listener
+button.addEventListener('click', function() {
+  // Navigate to the landing-page.html in the user folder
+  window.location.href = '../user/landing-page.html';
+});
+
+
       </script>
   </body>
 </html>
