--- a/admin/admin-financial-info.html
+++ b/admin/admin-financial-info.html
@@ -51,7 +51,7 @@
             <div class="get-started2">LOGIN</div>
           </div>
         </div>
-        <button class="primary-button5">
+        <button class="primary-button5" id="bpi-button">
           <div class="bpi-housing-loan2">BPI Housing Loan Application Form</div>
         </button>
       </div>
@@ -329,6 +329,17 @@
           window.location.href = "./admin-deposit-account.html";
         });
       }
+
+       // Find the button element
+  const button = document.getElementById('bpi-button');
+
+// Add a click event listener
+button.addEventListener('click', function() {
+  // Navigate to the landing-page.html in the user folder
+  window.location.href = '../user/landing-page.html';
+});
+
+
       </script>
   </body>
 </html>
