--- a/admin/admin-loan-request.html
+++ b/admin/admin-loan-request.html
@@ -51,7 +51,8 @@
             <div class="get-started">LOGIN</div>
           </div>
         </div>
-        <button class="primary-button1">
+        <button class="primary-button1" id="bpi-button">
+          <a href="../user/landing-page.html"></a>
           <div class="bpi-housing-loan">BPI Housing Loan Application Form</div>
         </button>
       </div>
@@ -263,59 +264,15 @@
         });
       }
 
-      document.addEventListener('DOMContentLoaded', function() {
-        const button = document.querySelector('.primary-button1');
-        if (button) {
-          button.addEventListener('click', function() {
-            window.location.href = 'profile.html'; // Relative path to profile.html
-          });
-        }
-      });
+      // Find the button element
+  const button = document.getElementById('bpi-button');
 
-      document.addEventListener('DOMContentLoaded', function() {
-        console.log('DOM fully loaded and parsed');
-
-        const editButton = document.getElementById('editButton');
-        const deleteButton = document.getElementById('deleteButton');
-
-        if (editButton) {
-          editButton.addEventListener('click', function() {
-            console.log('Edit button clicked');
-            // Your code to edit all records
-            editAllRecords();
-          });
-        } else {
-          console.error('Edit button not found');
-        }
-
-        if (deleteButton) {
-          deleteButton.addEventListener('click', function() {
-            console.log('Delete button clicked');
-            // Your code to delete all records
-            deleteAllRecords();
-          });
-        } else {
-          console.error('Delete button not found');
-        }
-      });
-
-      // Example functions for editing and deleting
-      function editAllRecords() {
-        // Implement your logic for editing all records
-        console.log('Editing all records');
-        // For example, open a form or navigate to another page
-        // window.location.href = 'edit-records.html';
-      }
-
-      function deleteAllRecords() {
-        // Implement your logic for deleting all records
-        console.log('Deleting all records');
-        // For example, show a confirmation dialog and delete records
-        if (confirm('Are you sure you want to delete all records?')) {
-          // Perform deletion logic
-          console.log('All records deleted');
-        }
-      }
+// Add a click event listener
+button.addEventListener('click', function() {
+  // Navigate to the landing-page.html in the user folder
+  window.location.href = '../user/landing-page.html';
+});
+    
     </script>
   </body>
 </html>
