--- a/admin/admin-deposit-account.html
+++ b/admin/admin-deposit-account.html
@@ -148,7 +148,7 @@
                       class="delete-icon8"
                       loading="lazy"
                       alt=""
-                      src="./public/delete1.svg"
+                      src="./public/delete.png"
                     />
                   </div>
                 </div>
