--- a/user/login-page.html
+++ b/user/login-page.html
@@ -207,7 +207,7 @@
                 </div>
               </div>
             </div>
-            <a href="profile.html" class="button1" id="button">
+            <a href="profile-agreement.html" class="button1" id="button">
               <img class="left-icon1" alt="" src="./public/lefticon.svg" />
               <div class="children2">Log in</div>
               <img class="right-icon1" alt="" src="./public/righticon.svg" />
@@ -235,7 +235,7 @@
       var button = document.getElementById("button");
       if (button) {
         button.addEventListener("click", function (e) {
-          window.location.href = "./profile.html";
+          window.location.href = "./profile-agreement.html";
         });
       }
       </script>
