--- a/user/sign-up-page.html
+++ b/user/sign-up-page.html
@@ -196,7 +196,7 @@
                 </div>
               </div>
             </div>
-            <a href="profile.html" class="button1" id="button">
+            <a href="profile-agreement.html" class="button1" id="button">
               <img class="left-icon1" alt="" />
               <div class="children2">Sign up</div>
               <img class="right-icon1" alt="" />
@@ -225,7 +225,7 @@
       var button = document.getElementById("button");
       if (button) {
         button.addEventListener("click", function (e) {
-          window.location.href = "./profile.html";
+          window.location.href = "./profile-agreement.html";
         });
       }
       </script>
