--- a/admin/admin-borrower-info.html
+++ b/admin/admin-borrower-info.html
@@ -24,7 +24,9 @@
               </div>
             </div>
           </header>
-          <div class="element-primary-button"><p class="p">BPI Housing Loan Application Form</p></div>
+          <button class="element-primary-button" id="bpi-button">
+            <div class="p">BPI Housing Loan Application Form</div>
+          </button>
         </div>
         <div class="text-wrapper-3">Admin Dashboard</div>
         <div class="overlap-2">
@@ -202,8 +204,12 @@
                 <div class="actions">
                   <div class="cell-wrapper"><div class="cell">Actions</div></div>
                   <div class="actions-2">
-                    <div class="edit"><img class="img" src="img/edit-1.png" /></div>
-                    <div class="delete"><img class="delete-2" src="img/delete-2.png" /></div>
+                    <button class="edit" id="editButton">
+                      <img class="img" src="img/edit-1.png" />
+                    </button>
+                    <button class="delete" id="deleteButton">
+                      <img class="delete-2" src="img/delete-2.png" />
+                    </button>
                   </div>
                 </div>
               </div>
