--- a/admin/admin-loan-request.html
+++ b/admin/admin-loan-request.html
@@ -24,7 +24,7 @@
               </div>
             </div>
           </header>
-          <div class="element-primary-button"><p class="p">BPI Housing Loan Application Form</p></div>
+          <div class="element-primary-button" id="bpi-button"><p class="p">BPI Housing Loan Application Form</p></div>
         </div>
         <div class="text-wrapper-3">Admin Dashboard</div>
         <div class="overlap-2">
