--- a/user/newreq-agreement.html
+++ b/user/newreq-agreement.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
     <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./profile-agreement.css" />
+    <link rel="stylesheet" href="./newreq-agreement.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700;800;900&display=swap"
@@ -241,7 +241,7 @@ if (groupContainer) {
         if (!checkbox1 || !checkbox2) {
             alert('Please ensure to check both confirmation boxes before saving. In order to continue your application.');
         } else {
-            window.location.href = "../profile/profile.html";
+            window.location.href = "./newreq.html";
         }
     });
 }
