--- a/user/newreq.html
+++ b/user/newreq.html
@@ -316,7 +316,7 @@
       var menuIconLabels = document.getElementById("menuIconLabels");
       if (menuIconLabels) {
         menuIconLabels.addEventListener("click", function (e) {
-          window.location.href = "./profile.html";
+          window.location.href = "./profile-agreement.html";
         });
       }
       
